[tool.poetry]
name = "dbt-airflow"
version = "0.0.8"
description = "A Python package that creates fine-grained Airflow tasks for dbt"
repository = "https://github.com/gmyrianthous/dbt-airflow"
authors = ["Giorgos Myrianthous <giorgos.myrianthous@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dbt_airflow" }]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
dbt-core = ">=1.2.0"
apache-airflow = ">=2.0.0,<3"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1,<8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
