[metadata]
name = dbt-airflow
description = A Python package that creates fine-grained Airflow tasks for dbt
long_description = file: README.md
keywords = dbt, airflow, dbt_airflow, dbt-airflow
version = 0.1.0
author = Giorgos Myrianthous
author_email = giorgos.myrianthous@gmail.com
readme = "README.md"
requires-python = ">=3.7"

[options]
package_dir=
    =dbt_airflow

