[metadata]
name = dbt-airflow
description = A Python package that creates fine-grained Airflow tasks for dbt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gmyrianthous/dbt-airflow
keywords = dbt, airflow, dbt_airflow, dbt-airflow
version = 0.1.0
author = Giorgos Myrianthous
author_email = giorgos.myrianthous@gmail.com
readme = README.md

[options]
python_requires = >=3.7, <4
install_requires =
    dbt-core>=1.2.0

[options.extras_require]
test =
    pytest>=7.1,<8
