[metadata]
name = dbt-airflow
description = A Python package that creates fine-grained Airflow tasks for dbt
version = 0.0.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gmyrianthous/dbt-airflow
keywords = dbt, airflow, dbt_airflow, dbt-airflow
readme = README.md
author = Giorgos Myrianthous
author_email = giorgos.myrianthous@gmail.com

[options]
packages =
    dbt_airflow
python_requires = >=3.7, <4
install_requires =
    dbt-core >=1.2.0
    apache-airflow >= 2.0.0
    pydantic

[options.packages.find]
where = dbt_airflow
include = *

[options.extras_require]
test =
    pytest >=7.1,<8
    mypy
    flake8

[options.entry_points]
console_scripts =
    dbt-airflow = dbt_airflow.cli.runner:main

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 120